# oinkie

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs  wasm.rs
lib/: Cargo.toml  README.md
lib/src/: birthmarks.rs  comparators.rs  extractors.rs  lib.rs
lib/src/extractors/: functions.rs  opcodes.rs  operands.rs
testdata/: .gitignore  FizzBuzz.java  Makefile  fibonacci.c  fizzbuzz.c  fizzbuzz.go  fizzbuzz.rs  simple.c
testdata/birthmarks/opfreqs/: fizzbuzz_go_opfreq.json
testdata/birthmarks/opseqs/: fizzbuzz_c_opseq.json  fizzbuzz_go_opseq.json  fizzbuzz_opseq.json  fizzbuzz_rs_opseq.json
testdata/src2ll/: fibonacci.ll  fizzbuzz_c.ll  fizzbuzz_rs.ll  hello.ll  simple.ll
