[workspace]
members = [ "lib", "cli" ]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = ""
repository = "https://github.com/tamada/oinkie"
homepage = "https://tamada.github.io/oinkie"
readme = "README.md"
authors = [
    "Haruaki Tamada <tamada_f@ke_cafebabe.jp>"
]
license-file = "LICENSE"
categories = ["birthmark toolkit", "theft-detection", "plagiarism-detection", "llvm", "llvm-ir", "llvm-bc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

