[package]
name = "oinkie-cli"
readme = "README.md"
description = "command line interface for oinkie"
categories = [ "command-line-utilities" ]
repository.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
oinkie = { path = "../lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
