[package]
name = "oinkie"
readme = "README.md"
description = "API for oinkie (birthmark toolkit for LLVM BC (IR))"
categories = [ "command-line-utilities" ]
repository.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
either = "1.15.0"
llvm-ir = { version = "0.11.3", features = ["llvm-19"] }
llvm-sys = "191.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
